# pctf

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
cli/: Cargo.toml  README.md
cli/src/: auth.rs  main.rs  oauth2.rs
cli/src/oauth2/: error.rs
docker-images/: deploy.sh
docker-images/challenge/: Dockerfile
supervisor/: Cargo.toml
supervisor/src/: docker.rs  lib.rs  main.rs
supervisor/src/docker/: connection.rs
web/: Cargo.toml
web/migrations/: 20211113153756_ctf_challenge_table.sql  20211113170055_challenge_type_enum.sql  20211113171411_add_challenge_type_and_repo_url.sql  20220103134712_add_challenge_type_enum.sql  20220103135614_init_challenge_table.sql
web/src/: challenge.rs  config.rs  loaders.rs  main.rs  node.rs  schema.rs
web/src/challenge/: queries.rs
web/src/loaders/: challenge_loaders.rs  challenge_selection_fetch.sql  challenge_selection_insert.sql  challenge_selection_table.sql
web/src/loaders/challenge_loaders/: loader_front.rs
