[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
dialoguer = "0.9.0"
lazy_static = "1.4.0"
anyhow = "1.0.48"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
serde_json = "1.0.72"