[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
async-graphql = { version = "2.11.3", features = ["uuid", "dataloader"] }
async-graphql-rocket = "2.11.3"
uuid = { version = "0.8.2", features = ["serde"] }