[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
async-graphql = { version = "2.11.3", features = ["uuid", "dataloader"] }
async-graphql-rocket = "2.11.3"
uuid = { version = "0.8.2", features = ["serde"] }
sqlx = { version = "0.5.9", features = ["chrono", "macros", "migrate", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
serde =  { version = "1.0.130", features = ["derive"] }
async-trait = "0.1.51"
futures = "0.3.17"
chrono = { version = "0.4.19", features = ["serde"] }